# agentops-triage

./: README.md  pyproject.toml
agentops-triage/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agentops-triage/.github/workflows/: ci.yml
agentops-triage/docs/: architecture.md  interview-guide.md
agentops-triage/examples/: sample_ticket.json
agentops-triage/src/agentops_triage/: __init__.py  __main__.py  agno_adapter.py  cli.py  config.py  graph.py  llm.py  main.py  prompts.py  rules.py  schemas.py
agentops-triage/tests/: test_rules.py  test_schemas.py
src/: b.py
